Update TravelStars.html (add link to PWA)

--- a/pages/projects/TravelStars.html
+++ b/pages/projects/TravelStars.html
@@ -68,7 +68,9 @@
                     This application allows users to create and store their own travel blogs locally. <br>I integrated the Leaflet JavaScript library, enabling users to click on a map and select a location for their blog. Additionally, I used the OpenWeather API to display the current weather of the capital city for the chosen location.
                         <br><br>
                     <span class="fw-bold">Used technologies: </span>
-                    TravelStars is built with HTML, CSS, JavaScript, and DaisyUI. It leverages IndexedDB for local storage, implements static and dynamic caching, and includes a manifest.json file for installability. Key features include map-based location selection via Leaflet and real-time weather data from the OpenWeather API.                    
+                    TravelStars is built with HTML, CSS, JavaScript, and DaisyUI. It leverages IndexedDB for local storage, implements static and dynamic caching, and includes a manifest.json file for installability. Key features include map-based location selection via Leaflet and real-time weather data from the OpenWeather API.  
+                    <br> <br>
+                    If you'd like to try out my PWA, you can do so by clicking this link: <a class="fw-bold purple" href="https://travelstars.netlify.app/">TravelStars</a>                  
                 </p>
             </div>
 
